[package]
name = "croissantage-defender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = [
        "wincon",
        "winuser",
        "libloaderapi",
        "shellapi",
        "synchapi" ]}
nokhwa = {version = "0.9.4", features = [
        "input-msmf"]}
image = "0.24.2"
exitfailure = "0.5.1"